--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <title>Ishan Echoes | Home Page</title>
     <!-- ishan icon -->
     <link rel="icon" href="./img/ie-logo1.jpg" type="image/x-icon" />
-    
+
 
     <!-- custom css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="test.css">
 
-        <!-- testimonial slider -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css">
-    
+    <!-- testimonial slider -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <style>
         [data-controller=index] .projects-cont .bg-columns .text-service h2 {
             color: #2a2727;
@@ -235,7 +236,8 @@
                     <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld3"
                         data-scroll-repeat="true">
                         <h2>Lorem, ipsum.</h2>
-                        <p><span class="word">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam adipisci voluptatum facilis repellendus libero itaque non quisquam neque..</span></p>
+                        <p><span class="word">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam adipisci
+                                voluptatum facilis repellendus libero itaque non quisquam neque..</span></p>
                         <div class="btn-hide">
                             <div class="aux-btn"><a href="javascript:void(0)" class="button">Learn more</a></div>
                         </div>
@@ -256,6 +258,171 @@
 
             </div>
         </div>
+
+        <!-- my work start -->
+        <section class="work-container">
+            <h2>OUR WORK</h2>
+            <div class="lineBottom"></div>
+            <div class="my-work">
+                <ul class="work-list">
+                    <li><a href="#all">All</a></li>
+                    <li><a href="#public-service">Public Service Ads</a></li>
+                    <li><a href="#short-non-fiction">Short Non-Fiction</a></li>
+                    <li><a href="#all">Long Non-Fiction</a></li>
+                    <li><a href="#all">Fiction</a></li>
+                    <li><a href="#all">Animation</a></li>
+                </ul>
+            </div>
+            <div class="work-contents" id="all">
+                <div class="work-item" id="public-service">
+                    <div class="work-heading">
+                        <h3>Public Service Ads</h3>
+                    </div>
+                    <div class="vdo">
+                        <div id="slider-container" class="slider">
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574451311232-cb647e9d71f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574449423472-4bc6a3d2473d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574459472673-09bbda49102a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=928&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1479981280584-037818c1297d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1560259324-12a044e67c34?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=20"
+                                    alt="">
+                            </div>
+                            <div onclick="prev()" class="control-prev-btn">
+                                <i class="fas fa-arrow-left"></i>
+                            </div>
+                            <div onclick="next()" class="control-next-btn">
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <div class="work-heading" id="short-non-fiction">
+                        <h3>Short Non-Fiction</h3>
+                    </div>
+                    <div class="vdo">
+                        <div id="slider-container-1" class="slider">
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574451311232-cb647e9d71f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574449423472-4bc6a3d2473d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574459472673-09bbda49102a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=928&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1479981280584-037818c1297d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1560259324-12a044e67c34?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="images.unsplash.com/photo-1532787799187-93655e51d472?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=20"
+                                    alt="">
+                            </div>
+                            <div onclick="prev()" class="control-prev-btn">
+                                <i class="fas fa-arrow-left"></i>
+                            </div>
+                            <div onclick="next()" class="control-next-btn">
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <div class="work-heading">
+                        <h3>Long Non-Fiction</h3>
+                    </div>
+                    <div class="vdo">
+                        <div id="slider-container" class="slider">
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574451311232-cb647e9d71f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574449423472-4bc6a3d2473d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <div class="work-heading">
+                        <h3>Fiction</h3>
+                    </div>
+                    <div class="vdo">
+                        <div id="slider-container" class="slider">
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574451311232-cb647e9d71f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <div class="work-heading">
+                        <h3>Animation</h3>
+                    </div>
+                    <div class="vdo">
+                        <div id="slider-container" class="slider">
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="https://images.unsplash.com/photo-1574451311232-cb647e9d71f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
+                                    alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- my work start -->
+
         <!-- Testimonial slider -->
         <div class="wrapper-slide">
             <h2>OUR CLIENTS</h2>
@@ -343,9 +510,9 @@
     <script src="./js/main.js"></script>
     <script type="text/javascript" src="./js/mdb.min.js"></script>
 
-        <!-- testimonial slider -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- testimonial slider -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
