--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                     <li><a href="#all">All</a></li>
                     <li><a href="#public-service">Public Service Ads</a></li>
                     <li><a href="#short-non-fiction">Short Non-Fiction</a></li>
-                    <li><a href="#all">Long Non-Fiction</a></li>
-                    <li><a href="#all">Fiction</a></li>
-                    <li><a href="#all">Animation</a></li>
+                    <li><a href="#long-non-fiction">Long Non-Fiction</a></li>
+                    <li><a href="#fiction">Fiction</a></li>
+                    <li><a href="#animation">Animation</a></li>
                 </ul>
             </div>
             <div class="work-contents" id="all">
@@ -317,8 +317,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="work-item">
-                    <div class="work-heading" id="short-non-fiction">
+                <div class="work-item" id="short-non-fiction">
+                    <div class="work-heading">
                         <h3>Short Non-Fiction</h3>
                     </div>
                     <div class="vdo">
@@ -355,16 +355,16 @@
                                 <img src="images.unsplash.com/photo-1532787799187-93655e51d472?ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=20"
                                     alt="">
                             </div>
-                            <div onclick="prev()" class="control-prev-btn">
+                            <div onclick="prevButton()" class="control-prev-btn">
                                 <i class="fas fa-arrow-left"></i>
                             </div>
-                            <div onclick="next()" class="control-next-btn">
+                            <div onclick="nextButoon()" class="control-next-btn">
                                 <i class="fas fa-arrow-right"></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="work-item">
+                <div class="work-item" id="long-non-fiction">
                     <div class="work-heading">
                         <h3>Long Non-Fiction</h3>
                     </div>
@@ -385,7 +385,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="work-item">
+                <div class="work-item" id="fiction">
                     <div class="work-heading">
                         <h3>Fiction</h3>
                     </div>
@@ -402,7 +402,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="work-item">
+                <div class="work-item" id="animation">
                     <div class="work-heading">
                         <h3>Animation</h3>
                     </div>
@@ -424,7 +424,7 @@
         <!-- my work start -->
 
         <!-- Testimonial slider -->
-        <div class="wrapper-slide">
+        <div class="wrapper-slide"  id="our-client">
             <h2>OUR CLIENTS</h2>
             <div class="lineBottom"></div>
             <div class="my-slider">
