--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Ishan Echoes | Home Page</title>
     <!-- ishan icon -->
-    <link rel="icon" href="./img/ie-logo1.jpg" type="image/x-icon" />
+    <link rel="icon" href="./img/tetimonial/favicon.png" type="image/x-icon" />
 
 
     <!-- custom css -->
@@ -149,7 +149,8 @@
                             <li class="splide__slide slide1">
                                 <div id="ishan-vid2" class="video-slide"><video id="player_banner_2" muted autoplay loop
                                         playsinline>
-                                        <source src="https://mdbcdn.b-cdn.net/img/video/Tropical.mp4" type="video/mp4">
+                                        <!-- <source src="https://mdbcdn.b-cdn.net/img/video/Tropical.mp4" type="video/mp4"> -->
+                                        <source src="./video/vdo-1.mp4" type="video/mp4">
                                     </video>
                                     <div class="filter"></div>
                                     <div class="text-service"><a href="javascript:void(0)">
@@ -164,7 +165,8 @@
                             <li class="splide__slide">
                                 <div id="ishan-vid1" class="video-slide"><video id="player_banner" muted autoplay loop
                                         playsinline>
-                                        <source src="https://mdbcdn.b-cdn.net/img/video/forest.mp4" type="video/mp4">
+                                        <!-- <source src="https://mdbcdn.b-cdn.net/img/video/forest.mp4" type="video/mp4"> -->
+                                        <source src="./video/vdo-2.mp4" type="video/mp4">
                                     </video>
                                     <div class="filter"></div>
                                     <div class="text-service"><a href="javascript:void(0)">
@@ -179,7 +181,9 @@
                             <li class="splide__slide">
                                 <div id="ishan-vid3" class="video-slide"><video id="player_banner_3" muted autoplay loop
                                         playsinline>
-                                        <source src="https://mdbcdn.b-cdn.net/img/video/Agua-natural.mp4"
+                                        <!-- <source src="https://mdbcdn.b-cdn.net/img/video/Agua-natural.mp4"
+                                            type="video/mp4"> -->
+                                        <source src="./video/vdo-3.mp4"
                                             type="video/mp4">
                                     </video>
                                     <div class="filter"></div>
