--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
             <div class="lineBottom"></div>
             <div class="my-work">
                 <ul class="work-list">
-                    <li><a href="index#all">All</a></li>
-                    <li><a href="index#public-service">Public Service Ads</a></li>
-                    <li><a href="index#short-non-fiction">Short Non-Fiction</a></li>
-                    <li><a href="index#long-non-fiction">Long Non-Fiction</a></li>
-                    <li><a href="index#fiction">Fiction</a></li>
-                    <li><a href="index#animation">Animation</a></li>
+                    <li><a href="index.html#all">All</a></li>
+                    <li><a href="index.html#public-service">Public Service Ads</a></li>
+                    <li><a href="index.html#short-non-fiction">Short Non-Fiction</a></li>
+                    <li><a href="index.html#long-non-fiction">Long Non-Fiction</a></li>
+                    <li><a href="index.html#fiction">Fiction</a></li>
+                    <li><a href="index.html#animation">Animation</a></li>
                 </ul>
             </div>
             <div class="work-contents" id="all">
@@ -282,7 +282,7 @@
                     <div class="work-heading">
                         <h3>Public Service Ads</h3>
                     </div>
-                    <div class="vdo">
+                    <div class="vdo" >
                         <div id="slider-container" class="slider">
                             <div class="slide">
                                 <img src="https://images.unsplash.com/photo-1574482620811-1aa16ffe3c82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=20"
