--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
                     </a>
                     <div class="menu-li">
                         <p class="first principal">OUR WORK</p>
-                        <div class="sub-options"><a href="javascript:void(0)">
+                        <div class="sub-options"><a href="index.html#public-service">
                                 <p>Public Service Ads</p>
-                            </a><a href="javascript:void(0)">
+                            </a><a href="index.html#short-non-fiction">
                                 <p>Short Non-Fiction</p>
-                            </a><a href="javascript:void(0)">
+                            </a><a href="index.html#long-non-fiction">
                                 <p>Long Non-Fiction</p>
-                            </a><a href="javascript:void(0)">
+                            </a><a href="index.html#fiction">
                                 <p>Fiction</p>
-                            </a><a href="javascript:void(0)">
-                                <p>Animation</p>[
+                            </a><a href="index.html#animation">
+                                <p>Animation</p>
                         </div>
                     </div>
                     <a class="menu-li" href="javascript:void(0)">
