--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                     </a>
                     <div class="menu-li">
                         <p class="first principal">OUR WORK</p>
-                        <div class="sub-options"><a href="index.html#public-service">
+                        <div class="sub-options"><a href="#public-service">
                                 <p>Public Service Ads</p>
-                            </a><a href="index.html#short-non-fiction">
+                            </a><a href="#short-non-fiction">
                                 <p>Short Non-Fiction</p>
-                            </a><a href="index.html#long-non-fiction">
+                            </a><a href="#long-non-fiction">
                                 <p>Long Non-Fiction</p>
-                            </a><a href="index.html#fiction">
+                            </a><a href="#fiction">
                                 <p>Fiction</p>
-                            </a><a href="index.html#animation">
+                            </a><a href="#animation">
                                 <p>Animation</p>
                         </div>
                     </div>
@@ -269,12 +269,12 @@
             <div class="lineBottom"></div>
             <div class="my-work">
                 <ul class="work-list">
-                    <li><a href="index.html#all">All</a></li>
-                    <li><a href="index.html#public-service">Public Service Ads</a></li>
-                    <li><a href="index.html#short-non-fiction">Short Non-Fiction</a></li>
-                    <li><a href="index.html#long-non-fiction">Long Non-Fiction</a></li>
-                    <li><a href="index.html#fiction">Fiction</a></li>
-                    <li><a href="index.html#animation">Animation</a></li>
+                    <li><a href="#all">All</a></li>
+                    <li><a href="#public-service">Public Service Ads</a></li>
+                    <li><a href="#short-non-fiction">Short Non-Fiction</a></li>
+                    <li><a href="#long-non-fiction">Long Non-Fiction</a></li>
+                    <li><a href="#fiction">Fiction</a></li>
+                    <li><a href="#animation">Animation</a></li>
                 </ul>
             </div>
             <div class="work-contents" id="all">
